# KleinBot

./: CMakeLists.txt  README.md
src/: main.cpp
src/ComputerStatus/: ComputerStatus.cpp  ComputerStatus.h
src/ConfigManager/: ConfigManager.cpp  ConfigManager.h
src/Database/: Database.cpp  Database.h
src/JsonParse/: JsonParse.cpp  JsonParse.h
src/Log/: Log.h
src/Message/: Message.cpp  Message.h  Person.hpp
src/MessageQueue/: MessageQueue.cpp  MessageQueue.h
src/ModelApiCaller/: Dock.hpp  RWKV.hpp
src/ModelApiCaller/GoogleStandard/: GoogleStandard.cpp
src/ModelApiCaller/OpenAIStandard/: OpenAIStandard.cpp  OpenAIStandard.h
src/ModelApiCaller/Realesrgan/: Realesrgan.cpp  Realesrgan.h
src/ModelApiCaller/StableDiffusion/: StableDiffusion.cpp  StableDiffusion.h
src/ModelApiCaller/Voice/: Voice.cpp  Voice.h
src/Network/: MyReverseWebSocket.cpp  MyReverseWebSocket.h  MyWebSocket.cpp  MyWebSocket.h  Network.cpp  Network.h  WebSocketHead.h
src/TimingTast/: TimingTast.cpp  TimingTast.h
src/submodules/CloudMusicID/: CloudMusicID.cpp  CloudMusicID.h
